# System-Design

./: README.md
DesignPatterns/AdapterDesignPattern/: main  main.cpp
DesignPatterns/ChainOfResponsibilityPattern/: main  main.cpp
DesignPatterns/CompositeDesignPattern/: main  main.cpp
DesignPatterns/FacadeDesignPattern/: inventoryService.h  main  main.cpp  notificationService.h  orderFacade.h  paymentService.h  shippingService.h
DesignPatterns/FlyweightDesignPattern/: humanoidRobot.h  iRobot.h  main  main.cpp  roboticDog.h  roboticFactory.h  sprites.h
DesignPatterns/InterpretorDesignPattern/: abstractExpression.h  addNonTerminalExpression.h  binaryNonTerminalExpression.h  context.h  main  main.cpp  multiplyNonTerminalExpression.h  numberTerminalExpression.h
DesignPatterns/MediatorDesignPattern/: auctionHouse.h  auctionMediator.h  bidder.h  colleague.h  main  main.cpp
DesignPatterns/MementoDesignPattern/: main  (+4 more)
Problems/vendingMaching/: CMakeLists.txt  main.cpp
Problems/vendingMaching/context/: product.h  vendingMachine.cpp  vendingMachine.h
Problems/vendingMaching/states/: collectMoneyState.cpp  collectMoneyState.h  dispenseState.cpp  dispenseState.h  idleState.cpp  idleState.h  selectionState.cpp  selectionState.h  vendingMachineState.h
solidPrinciples/: dependencyInversionPrinciple  dependencyInversionPrinciple.cpp  interfaceSegmentedPrinciple  interfaceSegmentedPrinciple.cpp  liskovSubstitutionPrinciple  liskovSubstitutionPrinciple.cpp  openClosedPrinciple  openClosedPrinciple.cpp  singleResponsibilityPrinciple  singleResponsibilityPrinciple.cpp
(+231 files in other folders)
